--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,6 @@
+<!-- 
+ HTML for APIs
+-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,7 +12,7 @@
     <script src="js/main.js"></script>
     <script src="https://cdn.tailwindcss.com"></script> <!--Se usa tailwindcss-->
 </head>
-<body class="antialiased bg-body text-body font-body">
+<body class="antialiased bg-body text-body font-body">https://realpython.com/python-django-blog/
     <div class="">
     <section class="relative pb-20">
         <nav class="flex justify-between items-center py-8 px-4 xl:px-10">
